# backend/src/app/controllers/report.ts
@@ -10,7 +10,7 @@ export const generateReportProjectByHours = async (req: Request, res: Response) 
         .join(TableNames.projects, 'milestones.projectId', '=', 'projects.id')
         .join(TableNames.users, 'users.id', '=', 'timeRecords.userId')
         .select('projects.name as projectName', database.raw('concat(users.firstName, " ", users.lastName) as userName'),
-        database.raw('sum(timeRecords.spentTime + timeRecords.overTime) as timeSpent'),
+        database.raw('sum(timeRecords.normalHours + timeRecords.overTime) as timeSpent'),
         'projects.id as projectId', 'users.id as userId')
         .groupBy('users.id', 'projects.id', 'projectName', 'userName')
     const report = await query;
@@ -23,7 +23,7 @@ export const generateReportProjectByCost = async (req: Request, res: Response) =
         .join(TableNames.projects, 'milestones.projectId', '=', 'projects.id')
         .join(TableNames.users, 'users.id', '=', 'timeRecords.userId')
         .select(database.raw('concat(users.firstName, " ", users.lastName) as userName'), 'projects.name as projectName',
-        database.raw('sum(users.costToCompanyPerHour * (timeRecords.spentTime + timeRecords.overTime)) as cost'))
+        database.raw('sum(users.costToCompanyPerHour * (timeRecords.normalHours + timeRecords.overTime)) as cost'))
         .groupBy('users.id', 'projects.id', 'projectName', 'userName')
     const report = await query;
     res.json(reportSerializer.getReportProjectByCost(report));
@@ -35,7 +35,7 @@ export const generateReportUserByHours = async (req: Request, res: Response) => 
         .join(TableNames.projects, 'milestones.projectId', '=', 'projects.id')
         .join(TableNames.users, 'users.id', '=', 'timeRecords.userId')
         .select('projects.name as projectName', database.raw('concat(users.firstName, " ", users.lastName) as userName'),
-        'projects.id as projectId', 'users.id as userId',database.raw('sum(timeRecords.spentTime + timeRecords.overTime) as timeSpent'))
+        'projects.id as projectId', 'users.id as userId',database.raw('sum(timeRecords.normalHours + timeRecords.overTime) as timeSpent'))
         .groupBy('users.id', 'projects.id', 'projectName', 'userName');
     const report = await query;
     res.json(reportSerializer.getReportUserByHours(report));
@@ -47,7 +47,7 @@ export const generateReportUserByCost = async (req: Request, res: Response) => {
         .join(TableNames.projects, 'milestones.projectId', '=', 'projects.id')
         .join(TableNames.users, 'users.id', '=', 'timeRecords.userId')
         .select('projects.name as projectName', database.raw('concat(users.firstName, " ", users.lastName) as userName'),
-        'projects.id as projectId', 'users.id as userId', database.raw('sum(users.costToCompanyPerHour * (timeRecords.spentTime + timeRecords.overTime)) as cost'))
+        'projects.id as projectId', 'users.id as userId', database.raw('sum(users.costToCompanyPerHour * (timeRecords.normalHours + timeRecords.overTime)) as cost'))
         .groupBy('users.id', 'projects.id', 'projectName', 'userName')
     const report = await query;
     res.json(reportSerializer.getReportUserByCost(report));
@@ -59,9 +59,9 @@ export const generateReportBudget = async (req: Request, res: Response) => {
     .join(TableNames.projects, 'milestones.projectId', '=', 'projects.id')
     .join(TableNames.users, 'users.id', '=', 'timeRecords.userId')
     .select('projects.name as projectName')
-    .select(database.raw('sum(users.costToCompanyPerHour * (timeRecords.spentTime + timeRecords.overTime)) as "actualCosts"'))
+    .select(database.raw('sum(users.costToCompanyPerHour * (timeRecords.normalHours + timeRecords.overTime)) as "actualCosts"'))
     .select('projects.budget as budgetCosts')
-    .select(database.raw('projects.budget -(sum(users.costToCompanyPerHour * (timeRecords.spentTime + timeRecords.overTime))) as "overUnder"'))
+    .select(database.raw('projects.budget -(sum(users.costToCompanyPerHour * (timeRecords.normalHours + timeRecords.overTime))) as "overUnder"'))
     .groupBy('projects.name', 'projects.budget')
     const report = await query;
     res.json(reportSerializer.getBudgetReport(report));
