# backend/src/app/serializers/timeRecord.ts
@@ -1,15 +1,0 @@
-import {Request} from "express";
-import {TimeRecord} from "../models/timeRecord";
-
-/*export const create = (req: Request): TimeRecord => {
-  return {
-    userId: req.body.userId,
-    projectId: req.body.projectId,
-    milestoneId: req.body.projectId,
-    actionLabelId: req.body.actionLabelId,
-    description: req.body.description,
-    spentTime: req.body.spentTime,
-    overtime: req.body.overTime,
-    date: req.body.date
-  }
-}*/
